change dropdown menu and fix overlap of news and projects

--- a/app/[lang]/Home.scss
+++ b/app/[lang]/Home.scss
@@ -275,13 +275,47 @@
       justify-self: flex-end;
     }
   }
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    @include breakpoint(1000px) {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+  }
   &__link {
     text-decoration: none;
+    width: 100%;
+    position: relative;
+    @include breakpoint(1000px) {
+      width: 350px;
+      height: 350px;
+    }
+  }
+  &__image {
+    width: 100%;
+    height: 250px;
+    @include breakpoint(1000px) {
+      width: 350px;
+      height: 350px;
+      background-size: cover;
+    }
   }
   &__project-name {
     text-decoration: none;
-    color: black;
-    font-size: 28px;
+    bottom: 7px;
+    padding: 4px;
+    color: rgb(255, 255, 255);
+    font-size: 22px;
+    font-weight: 400;
+    position: absolute;
+    z-index: 10;
+    background-color: #00000070;
+    @include breakpoint(1000px) {
+      bottom: 0;
+      font-size: 24px;
+    }
   }
   &__button-div {
     margin-top: 48px;
